# agentic-commerce

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  collector-output.txt  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yaml  deploy-doks.yml
deploy/doks/helm/wallet-service/: Chart.yaml  values.yaml
deploy/doks/observability/alloy/: config.alloy
deploy/doks/observability/grafana/: dashboards.json
deploy/doks/observability/k8s/: observability-stack.yaml
deploy/droplet/: docker-compose.yml
load/data/: scenarios.json
load/k6/: baseline.js  common.js  resiliency_partition.js  smoke.js  soak.js  spike.js
migrations/: 001_init.sql  002_journal_guardrails.sql
scripts/: bootstrap_db.sh  install_k6.sh  jwt_token_cli.py  run_dev.sh  run_load_suite.sh  run_resiliency_suite.sh  seed_wallets.py  seed_wallets_doks.sh  test.sh
src/wallet_service/: config.py  logging_config.py  main.py
src/wallet_service/api/: deps.py  routes.py  schemas.py
src/wallet_service/auth/: jwt.py
src/wallet_service/db/: database.py  migrations.py
src/wallet_service/domain/: errors.py
src/wallet_service/ledger/: __init__.py  service.py
src/wallet_service/observability/: otel.py
tests/: conftest.py
tests/integration/: test_projection_audit.py  test_transfer_idempotency.py
tests/reliability/: test_cp_fail_closed.py
tests/unit/: test_auth.py  test_ledger_invariants.py
(+10 files in other folders)
